TEST_PROGRAMS/INVALID/remi_bernard/case.min
# Incorrect case on 'do'
while a dO done

